Added note on environment configuration to notebooks

--- a/Module4/ApplyingLinearRegression.ipynb
+++ b/Module4/ApplyingLinearRegression.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "As a first, step you will load the dataset into the notebook environment. \n",
     "\n",
-    "First, execute the code in the cell below to load  the packages you will need to run the rest of this notebook. "
+    "First, execute the code in the cell below to load  the packages you will need to run the rest of this notebook. \n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -2538,7 +2540,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -2546,7 +2548,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
