--- a/Module4/IntroductionToRegression.ipynb
+++ b/Module4/IntroductionToRegression.ipynb
@@ -68,7 +68,9 @@
     "\n",
     "With this bit of theory in mind, you will now train and evaluate a linear regression model. In this case you will use simulated data, which means that you can compare the computed results to the known properties of the data. \n",
     "\n",
-    "As a first step, execute the code in the cell below to load the packages you will need to run the rest of this notebook. "
+    "As a first step, execute the code in the cell below to load the packages you will need to run the rest of this notebook. \n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -2820,7 +2822,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -2828,7 +2830,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
