--- a/Module5/Bias-Variance-Trade-Off.ipynb
+++ b/Module5/Bias-Variance-Trade-Off.ipynb
@@ -48,7 +48,9 @@
     "\n",
     "With the above bit of theory in mind, it is time to try an example. In this example you will compute and compare linear regression models using different levels and types of regularization. \n",
     "\n",
-    "Execute the code in the cell below to load the packages required for the rest of this notebook."
+    "Execute the code in the cell below to load the packages required for the rest of this notebook.\n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -6215,7 +6217,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -6223,7 +6225,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
