--- a/Module5/DimensionalityReduction.ipynb
+++ b/Module5/DimensionalityReduction.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "To cement the concepts of PCA you will now work through a simple example. This example is restricted to 2-d data so that the results are easy to visualize. \n",
     "\n",
-    "As a first step, execute the code in cell below to load the packages required for the rest of this notebook."
+    "As a first step, execute the code in cell below to load the packages required for the rest of this notebook.\n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -3946,7 +3948,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -3954,7 +3956,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
