--- a/Module7/IntroToUnsupervisedLearning.ipynb
+++ b/Module7/IntroToUnsupervisedLearning.ipynb
@@ -50,7 +50,9 @@
     "\n",
     "With the above bit of theory in mind, you will now apply both K-means and agglomerative clustering modes to a set of synthetic data. \n",
     "\n",
-    "First, execute the code in the cell below to load the packages required to run the rest of this notebook. "
+    "First, execute the code in the cell below to load the packages required to run the rest of this notebook. \n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -14313,7 +14315,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -14321,7 +14323,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
