--- a/Module2/VisualizingDataForClassification.ipynb
+++ b/Module2/VisualizingDataForClassification.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "As a first step you must load the dataset. \n",
     "\n",
-    "Execute the code in the cell below to load the packages required for the rest of this notebook."
+    "Execute the code in the cell below to load the packages required for the rest of this notebook.\n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -14503,7 +14505,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -14511,7 +14513,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
