--- a/Module3/DataPreparation.ipynb
+++ b/Module3/DataPreparation.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "As a first step you must load the dataset. \n",
     "\n",
-    "Execute the code in the cell below to load the packages required  to run this notebook. "
+    "Execute the code in the cell below to load the packages required  to run this notebook. \n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -10159,7 +10161,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -10167,7 +10169,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
