--- a/Module4/Classification.ipynb
+++ b/Module4/Classification.ipynb
@@ -27,7 +27,9 @@
     "\n",
     "In this section some basic properties of the logistic regression model are presented. \n",
     "\n",
-    "First, execute the code in the cell below to load the packages required  to run this notebook. "
+    "First, execute the code in the cell below to load the packages required  to run this notebook. \n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -2970,7 +2972,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -2978,7 +2980,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
