--- a/Module5/CrossValidation.ipynb
+++ b/Module5/CrossValidation.ipynb
@@ -46,7 +46,9 @@
     "\n",
     "With the above theory in mind, you will now try an example. \n",
     "\n",
-    "As a first step, execute the code in the cell below to load the packages required for this notebook. "
+    "As a first step, execute the code in the cell below to load the packages required for this notebook. \n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -1209,7 +1211,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -1217,7 +1219,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
