--- a/Module5/FeatureSelection.ipynb
+++ b/Module5/FeatureSelection.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "You will now apply the aforementioned principles to the bank credit data set. \n",
     "\n",
-    "As a first step, run the code in the cell below to load the required packages. "
+    "As a first step, run the code in the cell below to load the required packages. \n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -2873,7 +2875,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -2881,7 +2883,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
