--- a/Module6/SupportVectorMachines.ipynb
+++ b/Module6/SupportVectorMachines.ipynb
@@ -17,7 +17,10 @@
     "\n",
     "As a first example you will use SVMs to classify the species of iris flowers. \n",
     "\n",
-    "As a first step, execute the code in the cell below to load the required packages to run the rest of this notebook. "
+    "As a first step, execute the code in the cell below to load the required packages to run the rest of this notebook. \n",
+    "\n",
+    "\n",
+    "> **Note:** If you are running in Azure Notebooks, make sure that you run the code in the `setup.ipynb` notebook at the start of you session to ensure your environment is correctly configured. "
    ]
   },
   {
@@ -4640,7 +4643,7 @@
   "kernelspec": {
    "display_name": "R",
    "language": "R",
-   "name": "r"
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -4648,7 +4651,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
